# arbiter

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  EDGE_CASES_REPORT.md  Modelfile.arbiter1.0  PLAN.md  README.md  README_MULTI_ENDPOINT.md  RESUME_SESSION.md  SECURITY_REPORT.md  TODO.md  config.toml  config_example_multi_endpoint.toml  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  start-and-test.js  tailwind.config.ts  test-agent.js  test-api-integration.js  test-llama-integration.js  test_colors.sh  test_scroll.sh  test_tool_formats.rs  tsconfig.json  turbo.json  working.txt
.claude/: settings.local.json
apps/api/: jest.config.js  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/__tests__/: arbiter-service-db.test.ts  setup.ts
apps/api/src/middleware/: error-handler.ts
apps/api/src/routes/: agents.ts  events.ts  health.ts  runs.ts  workflows.ts
apps/api/src/services/: arbiter-service-db.ts  arbiter-service.ts
apps/api/src/utils/: sanitization.ts
apps/e2e/: package.json  playwright.config.ts  tsconfig.json
apps/e2e/tests/: agent-management.spec.ts  basic-navigation.spec.ts  error-scenarios.spec.ts  run-analytics.spec.ts  workflow-lifecycle.spec.ts
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: Layout.tsx  RunAnalytics.tsx  RunViewer.tsx  Toast.tsx
apps/web/src/hooks/: useToast.tsx
apps/web/src/pages/: Agents.tsx  Dashboard.tsx  Events.tsx  Settings.tsx  WorkflowDesigner.tsx  Workflows.tsx
apps/web/src/test/: setup.ts  test-utils.tsx
apps/web/src/utils/: api.ts
data/: arbiter.db-shm  arbiter.db-wal
models/: Modelfile.arbiter  Modelfile.dragoon  Modelfile.immortal  Modelfile.observer  Modelfile.templar  Modelfile.winchester
src/: ai.rs  ai_providers.rs  analyzer.rs  completion.rs  config.rs  context.rs  input_handler.rs  lib.rs  lsp.rs  lsp_context.rs  main.rs  repository.rs  repository_context.rs  shell.rs  tests.rs  tool_args.rs  tools.rs  tree_sitter_support.rs  types.rs
src/app/: layout.tsx
src/app/agents/: page.tsx
src/app/dashboard/: page.tsx
src/app/events/: page.tsx
src/app/runs/: page.tsx
src/app/settings/: page.tsx
src/app/workflows/: page.tsx
src/components/: Layout.tsx  NotificationCenter.tsx  RunAnalytics.tsx  RunViewer.tsx  Toast.tsx
src/components/ui/: card.tsx
src/hooks/: useToast.tsx
src/lib/agents/: agent-runtime.ts  granite-agent.ts
src/lib/core/: index.ts
src/lib/database/: database.ts  index.ts  run-logger.ts
src/lib/events/: event-system.ts
src/lib/middleware/: error-handler.ts
src/lib/services/: arbiter-service-db.ts  arbiter-service.ts  service-manager.ts
src/lib/utils/: api.ts
src/lib/workflow/: workflow-engine.ts
src/pages/api/: health.ts
tests/e2e/: accessibility.spec.ts  api-health.spec.ts  dashboard.spec.ts  navigation.spec.ts  pages.spec.ts  responsive.spec.ts  user-journeys.spec.ts  workflow-designer.spec.ts  workflows.spec.ts
(+46 files in other folders)
