[package]
name = "arbiter"
version = "1.0.0"
edition = "2021"
description = "ULTRA-lightweight AI-powered peer-programmer with local models"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/arbiter"

[[bin]]
name = "arbiter"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal and shell
rustyline = "13.0"
crossterm = "0.27"
ratatui = "0.24"
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream"] }

# XML parsing
roxmltree = "0.19"
quick-xml = { version = "0.31", features = ["async-tokio"] }

# Tree-sitter support (core languages only for now)
tree-sitter = "0.20"

# Language Server Protocol
tower-lsp = "0.20"
lsp-types = "0.95"

# Configuration
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Async and utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
shellwords = "1.1"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"